fixing unnecessary scrollbar

--- a/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
+++ b/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: calc((var(--vh) *100) - 162px);
+    height: calc((var(--vh) *100) - 173px);
     margin-bottom: 10px;
 
     &.empty {
@@ -89,7 +89,7 @@
 .virtual-scroller, virtual-scroller {
   width: 100%;
   //height: calc(100vh - 160px); // 64 is a random number, 523 for me. 
-  height: calc(var(--vh) * 100 - 160px);
+  height: calc(var(--vh) * 100 - 173px);
   //height: calc(100vh - 160px);
   //background-color: red;
   //max-height: calc(var(--vh)*100 - 170px);
